Fixed horizontal overflow in the slider

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -249,16 +249,19 @@ a.fn-item {
 /* ======= Carrousel settings =========== */
 .my-custom-swiper {
   width: 100%;
-  position: relative;
-  padding-bottom: 56.25%; /* For 16:9 aspect ratio */
-  height: 0;
+  height: 400px;
   margin: 20px auto;
   overflow: hidden;
 }
+@media (max-width: 768px) {
+  .my-custom-swiper {
+    height: 250px;
+  }
+}
+.my-custom-swiper .swiper-slide {
+  height: 100%;
+}
 .my-custom-swiper .swiper-slide-content {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   display: flex;
